--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="">
-            Logo new
+            Logo
         </div>
         <div class="">
             navigation
@@ -34,6 +34,11 @@
                 <section>
                     <strong>Form Results:</strong>
                     <div id="results"></div>
+                    <div id="url"></div>
+                    <div id="score"></div>
+                    <div id="subjectivity"></div>
+                    <div id="irony"></div>
+                    <div id="text"></div>
                 </section>
     </main>
 
