added url validation

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -33,6 +33,7 @@
 
                 <section>
                     <strong>Form Results:</strong>
+                    <div id="error"></div>
                     <div id="results"></div>
                     <div id="url"></div>
                     <div id="score"></div>
