--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,12 +1,31 @@
 form {
-    border: 1px solid #545454;
-    border-radius: 3px;
+    border: none;
     padding: 40px;
+    background-color: #0378A6;
+    display: flex;
 }
 
 input {
-    padding: 5px 20px;
-    width: 100%;
+    flex: 1;
+    padding: 10px 20px;
     line-height: 16px;
     margin: 10px 0;
+    border: 1px solid #30DFF2;
+    border-radius: 3px;
+    outline: none;
+    &[type=submit] {
+        max-width: 100px;
+        margin-left: 3px;
+        background-color: #fff;
+        &:hover {
+            background-color: #30DFF2;
+            cursor: pointer;
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    form {
+        padding: 20px;
+    }
 }
