--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -4,18 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>Evaluate News with nlp</title>
-    <link rel="stylesheet" href="/styles/resets.css">
-    <link rel="stylesheet" href="/styles/base.css">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/form.css">
-    <link rel="stylesheet" href="/styles/footer.css">
 </head>
 
 <body>
 
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="">
+            <img src="../images/logo.png" alt="Evaluate News">
         </div>
         <div class="">
             <ul class="menu">
@@ -30,7 +25,7 @@
         <section class="input">
             <h1>Evaluate News with NLP</h1>
             <form class="" onsubmit="return Client.handleSubmit(event)">
-                <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Article URL">
+                <input id="name" type="text" name="input" value="" placeholder="Enter URL">
                 <input type="submit" name="" value="Submit" onclick="return Client.handleSubmit(event)"
                     onsubmit="return Client.handleSubmit(event)">
             </form>
@@ -55,7 +50,15 @@
         <p>Udacity Front End Web Developer nanodegree</p>
         <p>Project by <a href="http://www.irinakramer.com" target="_blank">Irina Kramer</a></p>
     </footer>
-
+    <script>
+        // Check that service workers are supported
+        if ('serviceWorker' in navigator) {
+            // Use the window load event to keep the page load performant
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+    </script>
 </body>
 
 </html>
