added message css

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -35,8 +35,8 @@
             <div class="results">
                 <h2>Evaluation Results:</h2>
                 <p id="error"></p>
-                <p id="results"></p>
-                <p id="url"></p>
+                <!-- <p id="results"></p>
+                <p id="url"></p> -->
                 <p id="score"></p>
                 <p id="subjectivity"></p>
                 <p id="irony"></p>
