--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Evaluate News with nlp</title>
+    <title>Evaluate News with nlp - Irina Kramer</title>
 </head>
 
 <body>
@@ -35,8 +35,6 @@
             <div class="results">
                 <h2>Evaluation Results:</h2>
                 <p id="error"></p>
-                <!-- <p id="results"></p>
-                <p id="url"></p> -->
                 <p id="score"></p>
                 <p id="subjectivity"></p>
                 <p id="irony"></p>
@@ -47,8 +45,11 @@
     </main>
 
     <footer>
-        <p>Udacity Front End Web Developer nanodegree</p>
+
         <p>Project by <a href="http://www.irinakramer.com" target="_blank">Irina Kramer</a></p>
+        <p>Udacity Front End Web Developer nanodegree</p>
+        <p>Powered by <a href="https://www.meaningcloud.com/developer/sentiment-analysis/doc">Meaning Cloud Sentiment
+                Analysis API</a></p>
     </footer>
     <script>
         // Check that service workers are supported
