added twitter tags

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,7 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Evaluate News with nlp - Irina Kramer</title>
+    <title>Evaluate News with NLP</title>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@irinakramer" />
+    <meta name="twitter:title" content="Evaluate News with NLP" />
+    <meta name="twitter:description"
+        content="A web app that uses an MeaningCloud API to perform a check of user entered URL for positivity, subjectivity and irony" />
+    <meta name="twitter:image" content="https://evaluate-news-nlp-17.netlify.app/evaluate-news-screenshot.png" />
 </head>
 
 <body>
