social tags edits

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -8,8 +8,14 @@
     <meta name="twitter:site" content="@irinakramer" />
     <meta name="twitter:title" content="Evaluate News with NLP" />
     <meta name="twitter:description"
-        content="A web app that uses an MeaningCloud API to perform a check of user entered URL for positivity, subjectivity and irony" />
+        content="Check an article for sentiment such as positivity, subjectivity and irony. Powered by MeaningCloud API." />
     <meta name="twitter:image" content="https://evaluate-news-nlp-17.netlify.app/evaluate-news-screenshot.png" />
+    <meta property="og:title" content="Evaluate News with NLP" />
+    <meta property="og:description"
+        content="Check an article for sentiment such as positivity, subjectivity and irony. Powered by MeaningCloud API." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://evaluate-news-nlp-17.netlify.app/" />
+    <meta property="og:image" content="https://evaluate-news-nlp-17.netlify.app/evaluate-news-screenshot.png" />
 </head>
 
 <body>
